--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="main-section">
           <h1>About Me</h1>
 
-          <img src="images/aboutme.jpg" class="auth-image" alt="placeholder">
+          <img src="images/aboutme.JPG" class="auth-image" alt="placeholder">
 
           <p>My name is Chris Bone and I am 35, living in Saint Louis, MO. I'm married and have two dogs. In my free time I like to use my Peloton and do other workouts. I also love being outdoors and traveling any time I get a chance.</p>
 
